--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,11 +26,13 @@
       crossorigin="use-credentials"
     />
     <link
-     href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet"
-    /> 
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <script
-     src="https://kit.fontawesome.com/b181badfaf.js" crossorigin="anonymous"
-    ></script>
+      src="https://kit.fontawesome.com/b181badfaf.js"
+      crossorigin="anonymous">
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Moments</title>
+    <title>Gamebook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
